--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "dotenv": "^8.2.0",
+    "firebase": "^8.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-redux": "^7.1.3",
+    "react-icons": "^4.2.0",
+    "react-redux": "^7.2.2",
+    "react-redux-firebase": "^3.10.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
+    "redux-firestore": "^0.15.0",
     "styled-components": "^5.2.1"
   },
   "scripts": {
